vlib/v/checker/tests/option_selector_or_block_err.vv
struct Post {
mut:
	authors ?[]string
}

fn populate(mut post Post) []string {
	return post.authors or {
		post.authors = []string{}
		post.authors
	}
}

fn main() {
	mut test := Post{}
	populate(mut test)
	println(test)
}
